# CroneAr-Back

./: .gitignore  README.md  pyproject.toml
src/: .env  manage.py
src/api/markers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/api/markers/migrations/: 0001_initial.py  0002_rename_users_marker_user.py
src/api/users/: admin.py  functions.py  models.py  serializers.py  urls.py  views.py
src/api/users/migrations/: 0001_initial.py
src/cronear/: asgi.py  settings.py  urls.py  wsgi.py
